--- a/Forms/style1.css
+++ b/Forms/style1.css
@@ -3,7 +3,7 @@
   font-size: 20px;
 }
 
-.star {
+.form__star {
   color: red;
 }
 
@@ -11,24 +11,23 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-input,
-textarea {
+.form__input {
   width: 50%;
   padding: 10px 0px 10px 10px;
   resize: none;
 }
 
-select {
+.form__subject_options {
   width: 51%;
   padding: 10px 0px 10px 10px;
 }
 
-.name {
+.form__username {
   width: 24.5%;
   margin: 2px;
 }
 
-.topic {
+.form__fields {
   margin-bottom: 0;
   font-weight: bold;
 }
@@ -43,6 +42,6 @@ select {
   border: 0px;
 }
 
-.option-div {
+.form__entries {
   padding-top: 2px;
 }
